using Infrastructure;

namespace AdminCMS.Requests
{
    public class LoginRequest: BaseRequest
    {
        public int TenantId { get; set; }
        public string Email { get; set; } = string.Empty;
        public string Password { get; set; } = string.Empty;
    }
}