@startuml class_diagram_auth
'*****************************************************
' AIChat2025 - Class Diagram for Authentication Module
' Purpose: Show class structure for auth components
' Chapter: Chapter 4 - Design & Implementation
'*****************************************************

title Class Diagram - Authentication Module

package "Infrastructure" {
  abstract class BaseEntity {
    + Id: int
    + TenantId: int
    + CreatedAt: DateTime
    + UpdatedAt: DateTime?
  }

  class CurrentUserProvider {
    - _httpContextAccessor: IHttpContextAccessor
    + GetUserId(): int
    + GetUserEmail(): string
    + GetUserRole(): string
  }

  class CurrentTenantProvider {
    - _httpContextAccessor: IHttpContextAccessor
    + GetTenantId(): int
  }

  class TokenClaimsService {
    - _configuration: IConfiguration
    - _jwtSecretKey: string
    - _issuer: string
    - _audience: string
    + GenerateToken(account: Account): string
    - BuildClaims(account: Account): List<Claim>
  }

  class TokenDecoder {
    - _configuration: IConfiguration
    + DecodeToken(token: string): ClaimsPrincipal
    + ValidateToken(token: string): bool
  }

  class UpdateTenancyInterceptor {
    - _currentTenantProvider: CurrentTenantProvider
    + SavingChanges(eventData): InterceptionResult<int>
    + SavingChangesAsync(eventData): Task<InterceptionResult<int>>
  }

  class UpdateAuditableInterceptor {
    + SavingChanges(eventData): InterceptionResult<int>
    + SavingChangesAsync(eventData): Task<InterceptionResult<int>>
  }
}

package "AccountService" {
  class Account {
    + Id: int
    + TenantId: int
    + Email: string
    + PasswordHash: string
    + FullName: string
    + Role: string
    + IsActive: bool
    + CreatedAt: DateTime
    + UpdatedAt: DateTime?
  }

  class AccountDbContext {
    + Accounts: DbSet<Account>
    # OnModelCreating(builder: ModelBuilder)
    # OnConfiguring(optionsBuilder: DbContextOptionsBuilder)
  }

  class AccountBusiness {
    - _repository: IRepository<Account>
    - _tokenClaimsService: TokenClaimsService
    - _currentTenantProvider: CurrentTenantProvider
    + AuthenticateAsync(email, password): Task<AuthResult>
    + CreateAccountAsync(dto): Task<Account>
    + GetCurrentUserAsync(): Task<Account>
    + ChangePasswordAsync(oldPass, newPass): Task
    - HashPassword(password): string
    - VerifyPassword(password, hash): bool
  }

  class AuthEndpoint {
    {static} + MapAuthEndpoints(app: WebApplication)
    {static} - Login(request, business): Task<IResult>
    {static} - CurrentUser(business): Task<IResult>
  }

  class AccountEndpoint {
    {static} + MapAccountEndpoints(app: WebApplication)
    {static} - GetById(id, business): Task<IResult>
    {static} - List(business): Task<IResult>
    {static} - Create(dto, business): Task<IResult>
    {static} - Update(dto, business): Task<IResult>
    {static} - ChangePassword(dto, business): Task<IResult>
  }

  class LoginRequest {
    + Email: string
    + Password: string
  }

  class AuthResult {
    + Token: string
    + UserId: int
    + Email: string
    + Role: string
    + TenantId: int
  }

  class CreateAccountDto {
    + Email: string
    + Password: string
    + FullName: string
    + TenantId: int
    + Role: string
  }
}

package "WebApp (MVC)" {
  class AuthController {
    - _authBusiness: AuthBusiness
    + Login(): IActionResult
    + Login(model): Task<IActionResult>
    + Logout(): IActionResult
  }

  class LoginViewModel {
    + Email: string
    + Password: string
    + RememberMe: bool
  }

  class AuthBusiness_WebApp {
    - _httpClient: HttpClient
    - _httpContextAccessor: IHttpContextAccessor
    + LoginAsync(email, password): Task<AuthResult>
    + LogoutAsync(): Task
    - SetAuthCookie(token): void
    - ClearAuthCookie(): void
  }
}

' Relationships
BaseEntity <|-- Account

AccountDbContext o-- Account
AccountDbContext ..> UpdateTenancyInterceptor : uses
AccountDbContext ..> UpdateAuditableInterceptor : uses

AccountBusiness --> TokenClaimsService : uses
AccountBusiness --> CurrentTenantProvider : uses
AccountBusiness ..> Account : manages

AuthEndpoint --> AccountBusiness : uses
AuthEndpoint ..> LoginRequest : receives
AuthEndpoint ..> AuthResult : returns

AccountEndpoint --> AccountBusiness : uses
AccountEndpoint ..> CreateAccountDto : receives

AuthController --> AuthBusiness_WebApp : uses
AuthController ..> LoginViewModel : receives
AuthBusiness_WebApp ..> AuthEndpoint : calls via HTTP

UpdateTenancyInterceptor --> CurrentTenantProvider : uses
CurrentUserProvider ..> TokenDecoder : uses
CurrentTenantProvider ..> TokenDecoder : uses

' Notes
note right of TokenClaimsService
  **JWT Generation:**
  1. Build claims from Account
  2. Create signing credentials
     (HMAC-SHA256)
  3. Create JwtSecurityToken
  4. Return serialized token

  **Claims included:**
  - NameIdentifier (UserId)
  - tenant_id
  - Email
  - Role
  - scope (scope_web/scope_mobile)
  - Jti (unique token ID)
  - Iat (issued at)
end note

note right of AccountBusiness
  **Password Hashing:**
  - Algorithm: BCrypt
  - Work factor: 12
  - Never store plain password

  **Authentication Flow:**
  1. Find account by email
  2. Verify password (BCrypt)
  3. Generate JWT token
  4. Return token + user info

  **Multi-tenant:**
  - All queries filtered by TenantId
  - TenantId from CurrentTenantProvider
end note

note right of UpdateTenancyInterceptor
  **EF Core Interceptor:**
  Automatically adds TenantId on INSERT

  foreach (var entry in ChangeTracker.Entries<BaseEntity>())
  {
    if (entry.State == EntityState.Added)
    {
      entry.Entity.TenantId = _currentTenantProvider.GetTenantId();
      entry.Entity.CreatedAt = DateTime.UtcNow;
    }
    else if (entry.State == EntityState.Modified)
    {
      entry.Entity.UpdatedAt = DateTime.UtcNow;
    }
  }
end note

note right of CurrentTenantProvider
  **Extract TenantId from JWT:**
  1. Get JWT from HttpContext
  2. Decode token
  3. Extract "tenant_id" claim
  4. Return as int

  **Used everywhere:**
  - Query filtering (WHERE TenantId = X)
  - Insert interceptor
  - Business logic
end note

note as N1
  **Design Patterns Used:**
  - **Repository Pattern:** IRepository<T>
  - **Specification Pattern:** TenancySpecification
  - **Interceptor Pattern:** UpdateTenancyInterceptor
  - **Dependency Injection:** All services registered in DI container
  - **DTO Pattern:** LoginRequest, AuthResult, CreateAccountDto
  - **Provider Pattern:** CurrentUserProvider, CurrentTenantProvider

  **Security Features:**
  - Password hashing (BCrypt)
  - JWT authentication
  - HttpOnly cookies (web)
  - Row-level security (multi-tenant)
  - Automatic TenantId filtering
end note

@enduml
